--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     return urlParams.get(parameter) || defaultValue;
   }
 
-  var code = getUrlParam('id', 'na')
+  var id = getUrlParam('id', 'na')
   
   window.location.href="https://discbots.cf/bots.veiw?id="+id
 </script>
