--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 
   var id = getUrlParam('id', 'na')
   
-  window.location.href="https://discbots.cf/bots.veiw?id="+id
+  window.location.href="https://discbots.cf/bots.view?id="+id
 </script>
